# arth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: backend-conformance.yml  docs.yml  performance-baselines.yml
benches/: compiler_benchmarks.rs  end_to_end_benchmarks.rs  runtime_benchmarks.rs  vm_benchmarks.rs
crates/arth-cli/: Cargo.toml
crates/arth-cli/src/: main.rs
crates/arth-rt/: Cargo.toml  build.rs
crates/arth-rt/src/: alloc.rs  async_rt.rs  closure.rs  closure_variadic.rs  crypto.rs  encoding.rs  enum_rt.rs  error.rs  exception.rs  executor_rt.rs  html.rs  http.rs  io.rs  lib.rs  net.rs  panic.rs  postgres.rs  provider.rs  shared.rs  sqlite.rs  string.rs  struct_rt.rs  time.rs  tls.rs
crates/arth-ts-frontend/: Cargo.toml
crates/arth-ts-frontend/src/: compile.rs  controller.rs  diagnostics.rs  emit.rs  lib.rs  lower.rs  package.rs  symbol.rs  validate.rs  vm_meta.rs
crates/arth-ts-frontend/tests/: controller_e2e.rs  event_dispatch_tests.rs  golden_tests.rs  ts_guest_e2e.rs  type_mapping_tests.rs
crates/arth-vm/: Cargo.toml
crates/arth-vm/src/: builder.rs  bytecode.rs  debug.rs  executor.rs  host.rs  io.rs  jit.rs  jit_interp.rs  lib.rs  limits.rs  link.rs  ops.rs  program.rs  runtime.rs  tests.rs
crates/arth-vm/src/executor/: tests.rs
crates/arth-vm/src/runtime/: core.inc.rs  executor.inc.rs  ffi.inc.rs  host.inc.rs  html.inc.rs  interpreter.inc.rs  template.inc.rs
crates/arth-vm/tests/: mail_tests.rs  overflow_tests.rs  pool_tests.rs  postgres_tests.rs  sqlite_tests.rs
editors/vscode/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: arth.tmLanguage.json
examples/: test_closure_simple.arth  test_collections_full.arth  test_exception.arth  test_exception_simple.arth  test_field_visibility.arth  test_field_visibility_violations.arth  test_final_field_assignment_error.arth  test_final_fields.arth  test_final_fields_correct.arth  test_float_ops.arth  test_lambda_basic.arth  test_lambda_closure.arth  test_lambda_e2e.arth  test_list_api.arth  test_reverse.arth  test_struct_init_direct.arth  test_struct_init_final.arth  test_struct_init_final_working.arth  test_struct_init_simple.arth  test_struct_init_type_error.arth
examples/arth-sample/: README.md  arth.lock.json  arth.toml
examples/arth-sample/tests/: SessionDemo.arth  array_merge_test.arth  basic.arth  map_advanced_test.arth
examples/arth-single-file/: README.md  arth.toml
examples/ffi-consumer/: arth.toml
examples/ffi-demo-lib/: Cargo.toml
examples/ffi-demo-lib/arth-pkg/: arth.toml
examples/ffi-demo-lib/src/: lib.rs
examples/test-list-api/: arth.toml
examples/test-list-api/demo/: Main.arth
examples/ts-guest-counter/: data.ts  main.ts  math.ts
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs  fuzz_structured.rs  fuzz_typeck.rs
site/: _sidebar.md  home.md  index.html
site/guide/: concurrency.md  error-handling.md  functions-modules.md  generics.md  hello-world.md  installation.md  language-overview.md  ownership.md  providers.md  types.md  why-arth.md
site/reference/: cli.md  spec.md  stdlib.md
src/: lib.rs  main.rs
src/compiler/: ast.rs  diagnostics.rs  intrinsics.rs  mod.rs  source.rs  stdlib.rs
src/compiler/attrs/: mod.rs
src/compiler/codegen/: cranelift.rs  cranelift_tests.rs  linker.rs  llvm_debug.rs  llvm_text.rs  llvm_text_tests.rs  llvm_types.rs  mangle.rs  mod.rs
src/compiler/diag/: codes.rs  color.rs  mod.rs  snippet.rs
src/compiler/driver/: cache.rs  cli.rs  compile.rs  config.rs  extlib.rs  fs.rs  lockfile.rs  mod.rs  vm.rs
src/compiler/fmt/: mod.rs  printer.rs
src/compiler/hir/: core.rs  mod.rs  tests.rs
src/compiler/ir/: async_lower.rs  cfg.rs  dom.rs  mod.rs  opt.rs  ssa.rs  text_dump_tests.rs  verify.rs
src/compiler/lexer/: control.rs  core.rs  mod.rs  tests.rs  tokens.rs  with_reporter.rs
src/compiler/lint/: mod.rs  registry.rs
src/compiler/lower/: ast_to_hir.rs  hir_to_ir.rs  mod.rs
src/compiler/parser/: attrs.rs  control.rs  expr.rs  func.rs  mod.rs  stmt.rs  tests.rs  types.rs  util.rs
src/compiler/resolve/: mod.rs  registry.rs  tests.rs
tests/: benchmark_test.rs  cli_integration.rs  conformance_runner.rs  native_integration.rs  no_panic_regression.rs  parity_test.rs  reproducibility.rs  stdlib_runtime_coverage.rs  untrusted_input.rs
tests/benchmarks/: arithmetic.arth  fibonacci.arth  loop.arth
tests/cli_fixtures/: invalid_syntax.arth  valid_hello.arth
tests/e2e/: conc_01_thread_pool.arth  conc_02_work_stealing.arth  conc_03_spawn_parallel.arth  conc_04_suspend_wake.arth  conc_05_speedup.arth  conc_06_mpmc_queue.arth  conc_06_simple.arth  conc_07_chan_send_mt.arth  conc_08_chan_recv_mt.arth  conc_09_chan_select.arth  conc_10_backpressure_mt.arth  conc_11_actor_spawn.arth  conc_12_actor_messages.arth  conc_13_actor_state.arth  conc_14_actor_stop.arth  conc_15_actor_crash.arth  conc_16_sendable.arth  conc_17_sendable_derive.arth  conc_18_spawn_check.arth  conc_19_atomic.arth  conc_20_shareable.arth  conc_21_event_loop.arth  conc_22_timers.arth  conc_23_tcp_sockets.arth  conc_24_http_client.arth  conc_25_http_server.arth  err_bound_violation.arth  host_io_test.arth  p01_generic_fn.arth  p02_generic_struct.arth  p03_generic_bounds.arth  p04_provider_namespacing.arth  p04_type_inference.arth  p05_optional.arth  p05_provider_structured.arth  p07_interface_call.arth  p08_implements.arth  p09_interface_inherit.arth  p10_default_methods.arth  p11_try_catch.arth  (+44 more)
tests/integration/: db_param_test.arth  db_value_test.arth  enum_test.arth  list_test.arth  map_test.arth
tests/native/: hello_native.arth  hello_world.arth  minimal.arth  phase1_abi_struct_passing.arth  phase1_async_task.arth  phase1_closure.arth  phase1_control_flow.arth  phase1_enum.arth  phase1_exception.arth  phase1_executor_cancel.arth  phase1_executor_spawn.arth  phase1_provider.arth  phase1_region.arth  phase1_struct.arth
tests/parity/: arithmetic_parity.arth  console_parity.arth  control_flow_parity.arth
(+198 files in other folders)
