[package]
name = "arth-ts-frontend"
version = "0.1.0"
edition = "2024"

[lib]
name = "arth_ts_frontend"
path = "src/lib.rs"

[dependencies]
arth = { path = "../.." }
arth-vm = { path = "../arth-vm" }
swc_common = "18.0.1"
swc_ecma_ast = "19.0.0"
swc_ecma_parser = "29.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "arth-ts"
path = "src/bin/arth_ts.rs"
